--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="description">Description</string>
     <string name="photo_capture_fail">Photo capturing canceled</string>
     <string name="photo_capture_failed">Photo capturing failed!</string>
+    <string name="view_map">View map</string>
+    <string name="map_fail">Unable to launch map!</string>
 </resources>
