--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="photo_capture_failed">Photo capturing failed!</string>
     <string name="view_map">View map</string>
     <string name="map_fail">Unable to launch map!</string>
+    <string name="remove">Remove</string>
 </resources>
